# pii-redacta

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  Containerfile  Containerfile.api  DEVELOPMENT.md  Dockerfile  README.md  compose.yaml  docker-compose.test.yml  podman-compose.test.yml  podman-test-infra.yaml
.claude/: settings.local.json
.github/workflows/: ci.yml
crates/pii_redacta_api/: Cargo.toml
crates/pii_redacta_api/src/: extractors.rs  jwt.rs  lib.rs  main.rs  metrics.rs  security_test.rs  webhook_delivery.rs
crates/pii_redacta_api/src/auth/: admin.rs  errors.rs  extractors.rs  middleware.rs  mod.rs  rate_limit.rs
crates/pii_redacta_api/src/config/: mod.rs
crates/pii_redacta_api/src/handlers/: api_keys.rs  auth.rs  batch.rs  batch_test.rs  detection.rs  detection_test.rs  health.rs  health_test.rs  jobs.rs  jobs_test.rs  metrics.rs  metrics_test.rs  mod.rs  playground.rs  playground_test.rs  rules.rs  rules_test.rs  subscription.rs  subscription_test.rs  upload.rs  upload_test.rs  usage.rs  usage_test.rs  webhooks.rs  webhooks_test.rs
crates/pii_redacta_api/src/jobs/: mod.rs  processor.rs
crates/pii_redacta_api/src/middleware/: mod.rs  rate_limit.rs  security.rs
crates/pii_redacta_api/tests/: README.md  api_keys_integration_test.rs  auth_api_test.rs  auth_integration_test.rs  batch_test.rs  e2e_test.rs  playground_test.rs  rules_test.rs  webhooks_test.rs
crates/pii_redacta_api/tests/common/: fixtures.rs  mod.rs
crates/pii_redacta_core/: Cargo.toml
crates/pii_redacta_core/benches/: detection_bench.rs
crates/pii_redacta_core/migrations/: 20250102000000_initial_schema.sql  20250228000000_add_api_key_environment.sql  20260301000000_add_password_changed_at.sql  20260302000000_update_request_type_constraint.sql  20260303000000_widen_file_type_column.sql  20260310000000_add_custom_rules.sql  20260311000000_add_batch_jobs.sql  20260312000000_add_webhooks.sql  20260313000000_update_constraints_sprint14.sql
crates/pii_redacta_core/src/: error.rs  lib.rs
crates/pii_redacta_core/src/db/: api_key_manager.rs  mod.rs  models.rs  redis.rs  tier_manager.rs  usage.rs
crates/pii_redacta_core/src/detection/: custom.rs  custom_test.rs  mod.rs  patterns.rs  patterns_test.rs
crates/pii_redacta_core/src/extraction/: extractor.rs  extractor_test.rs  mod.rs
crates/pii_redacta_core/src/tokenization/: mod.rs  tokenizer.rs  tokenizer_test.rs
crates/pii_redacta_core/src/types/: entity.rs  mod.rs
crates/pii_redacta_core/tests/: api_key_manager_test.rs  project_structure_test.rs  tier_manager_test.rs
docs/: API_KEY_SECURITY_UPDATE.md  ARCHITECTURE.md  ARCHITECTURE_DECISION_ZK.md  ARCHITECTURE_GAPS.md  BILLING_PRICING.md  CONFIGURABLE_TIER_SYSTEM.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN_UPDATED.md  PLAYGROUND_IMPLEMENTATION.md  PORTAL_IMPLEMENTATION_PLAN.md  PORTAL_RESEARCH.md  PRICING_SUMMARY.md  PROCUREMENT_GUIDE.md  ROADMAP.md  SPRINT_9_IMPLEMENTATION.md  TDD_GUIDE.md  TDD_QUICKREF.md  TECH_STACK_RESEARCH.md  TIER_LICENSE_SYSTEM.md  USER_PLAYGROUND_UI.md  pricing-research-report.md
portal/: .gitignore  Containerfile  README.md  index.html  package-lock.json  package.json  playwright.config.ts
portal/e2e/: README.md  api-keys.spec.ts  auth.spec.ts  dashboard.spec.ts  fixtures.ts  settings.spec.ts
portal/src/: App.tsx  index.css  main.tsx
portal/src/components/: ErrorBoundary.tsx  Layout.tsx
portal/src/hooks/: useForm.ts  useToast.tsx
portal/src/lib/: api-errors.ts  api.ts  utils.ts
portal/src/pages/: ApiKeysPage.tsx  BatchPage.tsx  CustomRulesPage.tsx  DashboardPage.tsx  LoginPage.tsx  PlaygroundPage.tsx  RegisterPage.tsx  SettingsPage.tsx  UsagePage.tsx  WebhooksPage.tsx
portal/src/stores/: authStore.ts
portal/src/types/: index.ts
scripts/: db.sh  pods.sh  run-tests.sh  setup-infra.sh  test-podman.sh
