[workspace]
members = [
    "crates/pii_redacta_core",
    "crates/pii_redacta_api",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["PII Redacta Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/amiryahaya/pii-redacta"
rust-version = "1.75"

[workspace.dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
regex = "1.10"
once_cell = "1.19"
sha2 = "0.10"
hex = "0.4"

# Time and IDs
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
ipnetwork = "0.20"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Web framework
axum = { version = "0.7", features = ["json", "multipart"] }
tower = { version = "0.4", features = ["util"] }

# Database
sqlx = { version = "0.7", features = [
    "runtime-tokio",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "json"
] }

# Caching
redis = { version = "0.24", features = ["tokio-comp"] }

# Configuration
config = "0.14"

# Password hashing
argon2 = "0.5"

# Crypto
hmac = "0.12"
rand = "0.8"

# Encoding
base64 = "0.22"

# JWT
jsonwebtoken = "9"

# Validation
validator = { version = "0.16", features = ["derive"] }

# HTTP middleware
tower-http = { version = "0.5", features = ["cors", "trace", "request-id", "timeout", "limit"] }

# Tracing
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Testing
tokio-test = "0.4"
criterion = { version = "0.5", default-features = false }
futures = "0.3"
