[package]
name = "pii_redacta_api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "REST API for PII Redacta"

[[bin]]
name = "pii-redacta-api"
path = "src/main.rs"

[dependencies]
pii_redacta_core = { path = "../pii_redacta_core" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
