[package]
name = "pii_redacta_api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "REST API for PII Redacta"

[lib]
name = "pii_redacta_api"
path = "src/lib.rs"

[[bin]]
name = "pii-redacta-api"
path = "src/main.rs"

[dependencies]
pii_redacta_core = { path = "../pii_redacta_core" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
sqlx = { workspace = true }
redis = { workspace = true }
thiserror = { workspace = true }
tracing = "0.1"
tracing-subscriber = { workspace = true }
jsonwebtoken = { workspace = true }
argon2 = { workspace = true }
validator = { workspace = true }
tower-http = { workspace = true }
config = { workspace = true }
regex = { workspace = true }
once_cell = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
futures = { workspace = true }
base64 = { workspace = true }
